# haskell-nix-inspection-testing-bug

./: cabal.project  flake.nix  overlay.nix
example/: example.cabal
