cabal-version:       2.4

name:                example
version:             0.0.0
synopsis:            Reproduce a simple failure.
license:             MPL-2.0
build-type:          Simple

library
  default-language:    Haskell2010
  hs-source-dirs:      library
  exposed-modules:     Example
  build-depends:
      base
    , inspection-testing
